Fix word wrapping and padding

--- a/css/style.css
+++ b/css/style.css
@@ -547,7 +547,7 @@ section.install div h3{
 
 table{
 	margin: 20px 0px;
-	word-break:break-all;
+	word-break:overflow-wrap;
 }
 
 /*
@@ -564,12 +564,11 @@ thead{
 }
 
 
-/*========================*/
-/*Modified by Grant Tremblay to make first column Bold and table larger*/
 
 td{
-	padding:16px 4px;
+	padding:16px 5px;
 	font-size: 140%;
+	line-height: 1.3em;
 }
 
 
@@ -577,7 +576,6 @@ td:first-child {
     font-weight: bold;
   }
 
-/*========================*/
 
 /* About */
 
